--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: Liim6YX6+jqwxWfIKCJz/8z1IBTUtv//pm1nXJNjo3mv8NUTvXjL63zdFlmTJ2hp3dQ9X0bBzc+6eKG38+4DAb5MEXmItYGEeLpKSX+1VKgTt1R48fNU0z2mMP8YCSjf4+ijTuVols38VQDJwsjbZ//wJisozlCafTkhj9zYqak=
+    secure: KGu0WDRlGcvAx92QpfaxPb8kBZyT6sNE/X86BIcaJw86vZ/TFAyjYXIaAPZSFjwy+o7ZUsQUf0hujmfXL8BJTGp3YnokJqEeG3cKMNcZcjz3leCI5dcDj8HWWcj3tQrXE8sKcsCM0yra6mYMCy9sDbeKqhVSTAVi6iHaNZZhoCs=
