--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: KGu0WDRlGcvAx92QpfaxPb8kBZyT6sNE/X86BIcaJw86vZ/TFAyjYXIaAPZSFjwy+o7ZUsQUf0hujmfXL8BJTGp3YnokJqEeG3cKMNcZcjz3leCI5dcDj8HWWcj3tQrXE8sKcsCM0yra6mYMCy9sDbeKqhVSTAVi6iHaNZZhoCs=
+    secure: K9g+DGa+J49CWjjLDo8Un6FWGf5TGspCpZytXatTIFAGCokLCiNHch3kyNZOeXQGdzj3iPW07JVsi8hWLv16jDtWZtys4vw+fTFzB9d3N1dRcgotsLRuKax6I9sxWqhJvCbWNlU/AtodlgN6fkDROCFfOkPkiGPTM9TkCu59PZ4=
